--- a/reminderToWords/Info.plist
+++ b/reminderToWords/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>&quot;Uygulama, fotoğraf çekme işlemi için kameraya erişim gerektirir. Fotoğraflarınızı çekmek için izin vermek ister misiniz?&quot;</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Poppins-SemiBold.ttf</string>
