--- a/reminderToWords/Info.plist
+++ b/reminderToWords/Info.plist
@@ -2,10 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>BGTaskSchedulerPermittedIdentifiers</key>
-	<array>
-		<string>com.twinflare.reminderToWords</string>
-	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Uygulamamız, arka planda da size yakın olan etkinlikleri bildirmek için konumunuzu kullanır.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Uygulamamız, size yakın olan etkinlikleri bildirmek için konumunuzu kullanır.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Poppins-SemiBold.ttf</string>
@@ -36,7 +36,6 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
-		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 </dict>
